Changelog
=========

1.0b14 - Unreleased
-------------------

* Change reload strategy to set location to current href rather than using
  reload, which can cause repost queries on some browsers.
  [smcmahon]

1.0b13 - 2010-01-22
-------------------

* Fixed marshaling of submit buttons on AJAX submit when form has multiple
  buttons.
  [smcmahon]

1.0b12 - 2010-01-11
-------------------

* Allow noform and redirect options to be specified as callback functions.
  This will allow building in more smarts about what to do when ajax
  forms finish.
  [smcmahon]

* Avoid clobbering the onLoad config option if it is passed to prepOverlay.
  [davisagli]

1.0b11 - 2009-12-27
-------------------

* Declared all package dependencies and avoid unused imports inside tests.
  [hannosch]

1.0b10 - 2009-12-18
-------------------

* Add plugins resource and graphics directory.

* Update jqtools to use tooltips 1.1.3

1.0b9
-----

* Avoid overlay helper errors in Plone 3.x when trying to handle tabbed
  forms.

1.0b8
-----

* Check 'action' attribute for url, enabling simple forms to open overlays.

1.0b7
-----

* Initialize form tabbing on ajax form load.

* Marshall submit button values in ajax form submit, since jQuery
  doesn't include them.

1.0b6
-----

 * Document use of overlay helper.

1.0b5
-----

 * Integrate overlay helpers originally developed in pipbox. These
   provide support for AJAX loads and forms.

1.0b4
-----

 * Advance to jQuery Tools 1.2.1

1.0b3
-----

 * Fix packaging problem that prevented easy_install of 1.0b2.

1.0b2
-----

 * Move to jQuery Tools 1.1.1.


1.0b1
-----

 * Initial release